[package]
name = "icegraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.12"
rocksdb = { version ="0.20.1", features = ["multi-threaded-cf"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
xid = "1.0.3"
