[package]
name = "graph"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
crossbeam = "0.8.2"
paste = "1.0.12"
rayon = "1.7.0"
rmp-serde = "1.1.1"
rocksdb = { version ="0.20.1", features = ["multi-threaded-cf"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
xid = "1.0.3"

[build-dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.27"
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
syn = "2.0.15"
